<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.tagaryen</groupId>
  <artifactId>archer-framework</artifactId>
  <version>1.1.0</version>
  <description>
    Fast Spring-like framework. 
    Contact: tagaryen199@126.com
  </description>

  <name>archer-framework</name>
  <url>https://github.com/tagaryen/archer-framework</url>

  <properties>
    <java.version>1.8</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>github</id>
      <name>tagaryen</name>
      <email>2564928358@qq.com</email>
      <roles>
        <role>admin</role>
      </roles>
    </developer>
  </developers>

  <scm>
    <connection>https://github.com/tagaryen/archer-tools.git</connection>
    <developerConnection>scm:git:ssh://git@github.com:tagaryen/archer-tools.git</developerConnection>
    <url>https://github.com/tagaryen/archer-tools</url>
  </scm>

  <dependencies>
  	<dependency>
	    <groupId>io.github.tagaryen</groupId>
	    <artifactId>archer-tools</artifactId>
	    <version>1.2.12</version>
	</dependency>
  	<dependency>
	  <groupId>io.github.tagaryen</groupId>
	  <artifactId>archer-log</artifactId>
	  <version>1.1.7</version>
	</dependency>
	<dependency>
	  <groupId>com.mysql</groupId>
	  <artifactId>mysql-connector-j</artifactId>
	  <version>8.0.31</version>
	</dependency>
  </dependencies>
  
  <build>
    <finalName>archer-framework-${project.version}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>utf8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.4.0</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>github</publishingServerId>
          <tokenAuth>true</tokenAuth>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>utf8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>utf8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.9.1</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>utf8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>1.5</version>
        <configuration>
          <executable>C:/Users/CESTC/Soft/GnuPG/bin/gpg.exe</executable>
          <keyname>io.github.tagaryen</keyname>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>utf8</encoding>
        </configuration>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>

